--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -3,10 +3,10 @@
         <label *ngIf="sttSections">
             Total STTS ({{sttSections.length}})
         </label>
-        <input type="text" id="searchLookup"
+        <input type="text" id="searchSTTS"
             class="form-control input-sm" 
             style="width: 60%;"
-            [(ngModel)]="searchLookup"
+            [(ngModel)]="searchSTTS"
             placeholder="Search by any key" />
     </div>
     <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
@@ -61,7 +61,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let sttSection of sttSections | searchFilter: searchLookup; let i = index">
+        <tr *ngFor="let sttSection of sttSections | searchFilter: searchSTTS; let i = index">
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
