--- a/src/app/_component/stt-setting/stt-link-sttf/stt-link-sttf.component.html
+++ b/src/app/_component/stt-setting/stt-link-sttf/stt-link-sttf.component.html
@@ -5,7 +5,7 @@
 <div class="row" style="margin-top: 20px;">
     <div class="col-lg-6">
         <label>
-            Total {{formTitle}} (100)
+            Total {{formTitle}} ({{sttLinkSTTFLists.length}})
         </label>
         <input type="text" id="searchValue"
             class="form-control input-sm" 
@@ -27,7 +27,7 @@
             class="form-control input-sm"
             style="width: auto; background: #cb0f43;color: white;
             display: inline;margin-right: 7px;" 
-            (click)="addAction()">
+            data-toggle="modal" data-target="#addAction">
             <span class="glyphicon glyphicon-plus-sign"></span>
             {{addButton.title}}
         </button>
@@ -39,13 +39,125 @@
         <tr>
             <th style="width: 4%;">-</th>
             <th style="width: 4%;"># No</th>
-            <th>Form Type</th>
+            <th>UserId</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>FormId</th>
             <th>Form Name</th>
+            <th>Form Type</th>
             <th>Defult</th>
             <th>Created Date</th>
-            <th style="width: 10%;">Action</th>
+            <th style="width: 4%;">Action</th>
         </tr>
     </thead>
     <tbody>
+        <tr *ngFor="let sttLinkSTTF of sttLinkSTTFLists | searchFilter: searchValue; let i = index">
+            <td style="text-align: center;">
+                <div class="Yf">
+                    <div [ngClass]="{
+                        'Yg_inactive' : sttLinkSTTF.status.lookupValue === 0,
+                        'Yg_active' : sttLinkSTTF.status.lookupValue === 1,
+                        'Yg_delete': sttLinkSTTF.status.lookupValue === 2
+                    }"></div>
+                </div>
+            </td>
+            <td style="text-align: center;">{{sttLinkSTTF.sttLinkSttfId}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.appUserid}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.username}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.email}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.formId}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.formName}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.formType.description}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.formDefault.description}}</td>
+            <td style="text-align: center;">{{sttLinkSTTF.dateCreated | date:'dd-MM-yyyy'}}</td>
+            <td style="text-align: center;">
+                <div class="btn-group btn-group-xs" 
+                    role="group" style="text-align: center">
+                    <button type="button" class="btn btn-default"
+                        data-toggle="modal" data-target="#deleteAction"
+                        (click)="deleteAction(sttLinkSTTF)">
+                        <span class="glyphicon glyphicon-trash" 
+                            style="color: #dc3545;"></span>
+                    </button>
+                </div>
+            </td>
+        </tr>
     </tbody>
 </table>
+
+<!-- for link action -->
+<div class="modal fade" id="deleteAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
+
+<!-- link user -->
+<div class="modal fade" id="addAction" role="dialog" style="top: 85px;">
+    <div class="modal-dialog" style="width: 550px;">
+        <div class="modal-content">
+            <div class="modal-header" style="background: #555;">
+                <button type="button" #closeSttLinkSTTF class="close"
+                    data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">{{formTitle}}</h4>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="sttLinkSTTFForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="col-lg-5" *ngIf="appUserList">
+                            <div class="form-group">
+                                <select class="form-control input-sm" id="appUserId"
+                                    formControlName="appUserId"
+                                    [ngClass]="{ 'is-invalid': submitted && f.appUserId.errors }">
+                                    <option hidden value="" disabled selected>
+                                        Select User
+                                    </option>
+                                    <option *ngFor="let appUser of appUserList.reverse()"
+                                        [value]="appUser.appUserId">
+                                        {{appUser.username}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.appUserId.errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="f.appUserId.errors.required"
+                                        style="color: red;">AppUserId is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5" *ngIf="sttFormList">
+                            <div class="form-group">
+                                <select class="form-control input-sm" id="sttfId"
+                                    formControlName="sttfId"
+                                    [ngClass]="{ 'is-invalid': submitted && f.sttfId.errors }">
+                                    <option hidden value="" disabled selected>
+                                        Select STTF
+                                    </option>
+                                    <option *ngFor="let sttForm of sttFormList.reverse()"
+                                        [value]="sttForm.sttFId">
+                                        {{sttForm.sttFName}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.sttfId.errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="f.sttfId.errors.required"
+                                        style="color: red;">STTFId is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <button type="submit" [disabled]="loading"
+                                style="float: right;"
+                                class="btn btn-sm btn-danger">Save
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
