--- a/src/app/_component/stt-setting/stt-link-user/stt-link-user.component.html
+++ b/src/app/_component/stt-setting/stt-link-user/stt-link-user.component.html
@@ -5,7 +5,7 @@
 <div class="row" style="margin-top: 20px;">
     <div class="col-lg-6">
         <label>
-            Total {{formTitle}} (100)
+            Total {{formTitle}} ({{sttLinkUserLists.length}})
         </label>
         <input type="text" id="searchValue"
             class="form-control input-sm" 
@@ -15,8 +15,8 @@
     </div>
     <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
         <!-- working -->
-        <button *ngIf="refreshButton && refreshButton.active" type="button"
-            class="form-control input-sm"
+        <button *ngIf="refreshButton && refreshButton.active"
+            type="button" class="form-control input-sm"
             style="width: auto;display: inline;margin-right: 7px;"
             (click)="refreshAction()">
             <span class="glyphicon glyphicon-refresh"></span>
@@ -26,7 +26,8 @@
         <button *ngIf="addButton && addButton.active" type="button"
             class="form-control input-sm"
             style="width: auto; background: #cb0f43;color: white;
-            display: inline;margin-right: 7px;" 
+            display: inline;margin-right: 7px;"
+            data-toggle="modal" data-target="#addAction"
             (click)="addAction()">
             <span class="glyphicon glyphicon-plus-sign"></span>
             {{addButton.title}}
@@ -38,15 +39,96 @@
     <thead>
         <tr>
             <th style="width: 4%;">-</th>
-            <th style="width: 4%;"># No</th>
-            <th>UserId</th>
-            <th>Full Name</th>
+            <th style="width: 5%;"># No</th>
+            <th style="width: 5%;">UserId</th>
             <th>Username</th>
             <th>Email</th>
             <th>Created Date</th>
-            <th style="width: 10%;">Action</th>
+            <th style="width: 4%;">Action</th>
         </tr>
     </thead>
     <tbody>
+        <tr *ngFor="let sttLinkUser of sttLinkUserLists | searchFilter: searchValue; let i = index">
+            <td style="text-align: center;">
+                <div class="Yf">
+                    <div [ngClass]="{
+                        'Yg_inactive' : sttLinkUser.status.lookupValue === 0,
+                        'Yg_active' : sttLinkUser.status.lookupValue === 1,
+                        'Yg_delete': sttLinkUser.status.lookupValue === 2
+                    }"></div>
+                </div>
+            </td>
+            <td style="text-align: center;">{{sttLinkUser.sttLinkUserId}}</td>
+            <td style="text-align: center;">{{sttLinkUser.appUserid}}</td>
+            <td style="text-align: center;">{{sttLinkUser.username}}</td>
+            <td style="text-align: center;">{{sttLinkUser.email}}</td>
+            <td style="text-align: center;">{{sttLinkUser.dateCreated | date:'dd-MM-yyyy'}}</td>
+            <td style="text-align: center;">
+                <div class="btn-group btn-group-xs" 
+                    role="group" style="text-align: center">
+                    <button type="button" class="btn btn-default"
+                        data-toggle="modal" data-target="#deleteAction"
+                        (click)="deleteAction(sttLinkUser)">
+                        <span class="glyphicon glyphicon-trash" 
+                            style="color: #dc3545;"></span>
+                    </button>
+                </div>
+            </td>
+        </tr>
     </tbody>
 </table>
+
+<!-- for link action -->
+<div class="modal fade" id="deleteAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
+<!-- link user -->
+<div class="modal fade" id="addAction" role="dialog" style="top: 85px;">
+    <div class="modal-dialog" style="width: 550px;">
+        <div class="modal-content">
+            <div class="modal-header" style="background: #555;">
+                <button type="button" #closeSttLinkUser class="close"
+                    data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add User</h4>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="sttLinkUserForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="col-lg-8" *ngIf="appUserList">
+                            <div class="form-group">
+                                <select class="form-control input-sm" id="appUserId"
+                                    formControlName="appUserId"
+                                    [ngClass]="{ 'is-invalid': submitted && f.appUserId.errors }">
+                                    <option hidden value="" disabled selected>
+                                        Select User
+                                    </option>
+                                    <option *ngFor="let appUser of appUserList"
+                                        [value]="appUser.appUserId">
+                                        {{appUser.username}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.appUserId.errors"
+                                    class="invalid-feedback">
+                                    <div *ngIf="f.appUserId.errors.required"
+                                        style="color: red;">AppUserId is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <button type="submit" [disabled]="loading"
+                                style="float: right;"
+                                class="btn btn-sm btn-danger">Save
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
