--- a/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
+++ b/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
@@ -71,16 +71,16 @@
                 </div>
             </td>
             <td>
-                {{sttControl.sttCId}}
+                {{sttControl.sttcId}}
             </td>
             <td style="text-align: center;">
-                {{sttControl.sttCOrder}}
+                {{sttControl.sttcOrder}}
             </td>
             <td style="text-align: center;">
                 {{sttControl.filedType?.description | uppercase}}
             </td>
             <td style="text-align: center;">
-                {{sttControl.sttCName}}
+                {{sttControl.sttcName}}
             </td>
             <td style="text-align: center;">
                 {{sttControl.filedName}}
