--- a/src/app/_component/stt-setting/sttf-list/sttf-list.component.html
+++ b/src/app/_component/stt-setting/sttf-list/sttf-list.component.html
@@ -65,7 +65,7 @@
                     }"></div>
                 </div>
             </td>
-            <td>{{sstForm.sttFId}}</td>
+            <td>{{sstForm.sttfId}}</td>
             <td style="text-align: center;">
                 {{sstForm.formType.description}}
                 <!-- <span class="badge"
@@ -75,7 +75,7 @@
                     }">
                 </span> -->
             </td>
-            <td>{{sstForm.sttFName}}</td>
+            <td>{{sstForm.sttfName}}</td>
             <td style="text-align: center;">
                 {{sstForm.sttfDefault.description}}
             </td>
