--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -71,11 +71,11 @@
                     }"></div>
                 </div>
             </td>
-            <td>{{sttSection.sttSId}}</td>
+            <td>{{sttSection.sttsId}}</td>
             <td style="text-align: center;">
-                {{sttSection.sttSOrder}}
+                {{sttSection.sttsOrder}}
             </td>
-            <td>{{sttSection.sttSName}}</td>
+            <td>{{sttSection.sttsName}}</td>
             <td style="text-align: center;">
                 {{sttSection.sttsDefault.description}}
             </td>
