--- a/src/app/_component/stt-setting/sttf-link-stts/sttf-link-stts.component.html
+++ b/src/app/_component/stt-setting/sttf-link-stts/sttf-link-stts.component.html
@@ -5,7 +5,7 @@
 <div class="row" style="margin-top: 20px;">
     <div class="col-lg-6">
         <label>
-            Total {{formTitle}} (-)
+            Total {{formTitle}} ({{sttfLinkSTTSList.length}})
         </label>
         <input type="text" id="searchValue"
             class="form-control input-sm" 
@@ -32,5 +32,117 @@
             <span class="glyphicon glyphicon-plus-sign"></span>
             {{addButton.title}}
         </button>
+    </div>
+</div>
+
+<table id="stt" style="font-size: 12px;margin-top: 10px;"
+    class="table table-responsive table table-striped table-bordered table-sm">
+    <thead>
+        <tr>
+            <th style="width: 4%;">-</th>
+            <th style="width: 4%;"># No</th>
+            <th style="width: 5%;">Stts Id</th>
+            <th>Order</th>
+            <th>Section Name</th>
+            <th>Defult</th>
+            <th>Created Date</th>
+            <th style="width: 4%;">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let sttfLinkSTTS of sttfLinkSTTSList | searchFilter: searchValue; let i = index">
+            <td style="text-align: center;">
+                <div class="Yf">
+                    <div [ngClass]="{
+                        'Yg_inactive' : sttfLinkSTTS.status.lookupValue === 0,
+                        'Yg_active' : sttfLinkSTTS.status.lookupValue === 1,
+                        'Yg_delete': sttfLinkSTTS.status.lookupValue === 2
+                    }"></div>
+                </div>
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.sttfLinkSttsId}}
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.sttsId}}
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.taskType.sttsOrder}}
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.sttsName}}
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.sttsDefault.description}}
+            </td>
+            <td style="text-align: center;">
+                {{sttfLinkSTTS.dateCreated | date:'dd-MM-yyyy'}}
+            </td>
+            <td style="text-align: center;">
+                <div class="btn-group btn-group-xs" 
+                    role="group" style="text-align: center">
+                    <button type="button" class="btn btn-default"
+                        data-toggle="modal" data-target="#deleteAction"
+                        (click)="deleteAction(sttfLinkSTTS)">
+                        <span class="glyphicon glyphicon-trash" 
+                            style="color: #dc3545;"></span>
+                    </button>
+                </div>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+<!-- for link action -->
+<div class="modal fade" id="deleteAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
+
+<!-- link user -->
+<div class="modal fade" id="addAction" role="dialog" style="top: 85px;">
+    <div class="modal-dialog" style="width: 550px;">
+        <div class="modal-content">
+            <div class="modal-header" style="background: #555;">
+                <button type="button" #closeSttfLinkStts class="close"
+                    data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add Section</h4>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="sttfLinkSttsForm" (ngSubmit)="onSubmit()">
+                    <div class="row">
+                        <div class="col-lg-10" *ngIf="sttSectionList">
+                            <div class="form-group">
+                                <select class="form-control input-sm" id="sttsId"
+                                    formControlName="sttsId"
+                                    [ngClass]="{ 'is-invalid': submitted && f.sttsId.errors }">
+                                    <option hidden value="" disabled selected>
+                                        Select STTS
+                                    </option>
+                                    <option *ngFor="let sttSection of sttSectionList.reverse()"
+                                        [value]="sttSection.sttsId">{{sttSection.sttsName}}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && f.sttsId.errors" class="invalid-feedback">
+                                    <div *ngIf="f.sttsId.errors.required"
+                                        style="color: red;">SttsId is required
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-2">
+                            <button type="submit" [disabled]="loading"
+                                style="float: right;"
+                                class="btn btn-sm btn-danger">Save
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
