--- a/src/app/_component/stt-setting/view-sttc/view-sttc.component.html
+++ b/src/app/_component/stt-setting/view-sttc/view-sttc.component.html
@@ -63,19 +63,19 @@
     }
 </style>
 
-<div class="row gutters-sm" *ngIf="sttcForm" style="margin-top: 5px;">
+<div class="row" *ngIf="sttcForm" style="margin-top: 5px;">
     <form [formGroup]="sttcForm">
         <div class="col-lg-12">
             <div id="basic" class="borderd-content">
                 <div class="title" style="color: #cb0f43;">{{formTitle}}</div>
                 <div class="content" style="margin-top: 10px;">
                     <div class="row">
-                        <!-- sttCName -->
+                        <!-- sttcName -->
                         <div class="col-lg-4">
                             <div class="form-group">
-                                <label for="sttCName">Control Name</label>
-                                <input type="text" id="sttCName"
-                                    formControlName="sttCName"
+                                <label for="sttcName">Control Name</label>
+                                <input type="text" id="sttcName"
+                                    formControlName="sttcName"
                                     class="form-control input-sm"
                                     placeholder="Enter control name"
                                     oninput="this.value = this.value.toUpperCase()" />
