--- a/src/app/_component/stt-setting/view-sttf/view-sttf.component.html
+++ b/src/app/_component/stt-setting/view-sttf/view-sttf.component.html
@@ -67,7 +67,7 @@
     }
 </style>
 
-<div class="row gutters-sm" style="margin-top: 5px;" *ngIf="sttfForm">
+<div class="row" style="margin-top: 5px;" *ngIf="sttfForm">
     <form [formGroup]="sttfForm">
         <div class="col-lg-12">
             <div id="basic" class="borderd-content">
