--- a/src/app/_component/stt-setting/view-stts/view-stts.component.html
+++ b/src/app/_component/stt-setting/view-stts/view-stts.component.html
@@ -63,7 +63,7 @@
     }
 </style>
 
-<div class="row gutters-sm" style="margin-top: 5px;" *ngIf="sttsForm">
+<div class="row" style="margin-top: 5px;" *ngIf="sttsForm">
     <form [formGroup]="sttsForm">
         <div class="col-lg-12">
             <div id="basic" class="borderd-content">
